fix:compile error, support jdk17